[package]
name = "tls_interceptor_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
tokio = { version = "1.40.0", features = ["full"] }
har = "0.8.0"
cookie = "0.18.1"
time = "0.3.36"
serde_json = "1.0.128"
chrono = "0.4"
futures-util = "0.3.31"
tower = "0.5.1"
futures = "0.3.31"
openssl = "0.10.30"
log = "^0.4"
tokio-native-tls = "0.3.0"
native-tls = "^0.2"
thiserror = "^1.0"
hyper = { version = "0.14", features = ["full", "client", "server", "http1"] }
uuid = { version = "1", features = ["v4"] }

[[example]]
name = "sign_cert_for_site"
path = "example/sign_cert_for_site.rs"

[lib]
name = "third_wheel"
path = "src/third_wheel/lib.rs"